syntax="proto3";
package cosmos.lms.v1beta1;
option go_package="x/lms/types";
import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
service Msg {
    // RegisterAdmin adds a new admin
    rpc RegisterAdmin(RegisterAdminRequest) returns (RegisterAdminResponse);
    
    // AddStudent adds new student
    rpc AddStudent(AddStudentRequest) returns (AddStudentResponse);
    
    // ApplyLeave request a new leave
    rpc ApplyLeave(ApplyLeaveRequest) returns (ApplyLeaveResponse);
    
    // AcceptLeave accept or reject a leave
    rpc AcceptLeave(AcceptLeaveRequest) returns (AcceptLeaveResponse);
}

message RegisterAdminRequest {
    // address is the account address of the admin.
    string signer=1;

    string address = 2;
    
    // name is the admin name
    string name = 3;
}

message RegisterAdminResponse{}

message AddStudentRequest {
    // admin is the account address of the admin
    string signer=1;
    string admin = 2;
    
    // students is the list of Student.
    repeated Student students = 3;
}

message AddStudentResponse{}

message ApplyLeaveRequest {
    string signer=1;

    string studentid = 2;
    
    string reason = 3;
    
    google.protobuf.Timestamp from = 4  [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
    
    google.protobuf.Timestamp to = 5  [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
    
}

message ApplyLeaveResponse {

}

enum LeaveStatus {
    STATUS_UNDEFINED = 0;
    
    STATUS_ACCEPTED = 1;
    
    STATUS_REJECTED = 2;
}

message AcceptLeaveRequest {

    string signer=1;

    string admin = 2;
    
    string student_id = 3;
    string leave_id=4;
    LeaveStatus status = 5;
}

message AcceptLeaveResponse {

}

message Student {
    // address is the account address of the student.
    string address = 1;
    
    // name is the student name.
    string name = 2;
    
    // id is a unique student id.
    string id = 3;
}
message LeaveRequest {
    string signer=1;

    string address = 2;
    
    string reason = 3;
    
    google.protobuf.Timestamp from = 4  [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
    
    google.protobuf.Timestamp to = 5  [(gogoproto.stdtime) = true, (gogoproto.nullable) = true];
    int64 leaveid=6;
    
    LeaveStatus status = 7;
}